--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - "8"
 
+addons:
+  - chrome: stable
+
 cache:
   directories:
     - "node_modules"
@@ -13,3 +16,4 @@ branches:
     - master
     - release
     - publish
+    - feature/*
