--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 language: node_js
+sudo: required
 
 node_js:
   - "8"
 
 before_install:
-  - export CHROME_BIN=chromium-browser
+  - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+
+addons:
+  apt:
+    sources:
+     - google-chrome
+    packages:
+     - google-chrome-stable
 
 cache:
   directories:
